<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.example</groupId>
    <artifactId>ProductCrudApp</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <failOnMissingWebXml>false</failOnMissingWebXml>
    </properties>

    <dependencies>
        <!-- Jakarta EE APIs -->
        <dependency>
            <groupId>jakarta.platform</groupId>
            <artifactId>jakarta.jakartaee-api</artifactId>
            <version>10.0.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- PostgreSQL JDBC Driver -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.3</version>
        </dependency>
        <!-- Junit testing -->
        <dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter</artifactId>
		    <version>5.10.2</version>
		    <scope>test</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-core</artifactId>
		    <version>5.11.0</version>
		    <scope>test</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-junit-jupiter</artifactId>
		    <version>5.11.0</version>
		    <scope>test</scope>
		</dependency>  
		
		<dependency>
		    <groupId>io.rest-assured</groupId>
		    <artifactId>rest-assured</artifactId>
		    <version>5.3.0</version>
		    <scope>test</scope>
		</dependency>
		
		<dependency>
		    <groupId>io.rest-assured</groupId>
		    <artifactId>json-path</artifactId>
		    <version>5.3.0</version>
		    <scope>test</scope>
		</dependency>
	
		<!-- MicroProfile OpenAPI API (just the API, GlassFish provides impl) -->
		<dependency>
		    <groupId>org.eclipse.microprofile.openapi</groupId>
		    <artifactId>microprofile-openapi-api</artifactId>
		    <version>4.0.2</version>
		</dependency>
        
		<dependency>
		    <groupId>io.smallrye</groupId>
		    <artifactId>smallrye-open-api-jaxrs</artifactId>
		    <version>4.0.8</version>
		</dependency>
	
    </dependencies>

    <build>
        <finalName>ProductCrudApp</finalName>
    </build>
</project>
